correcting layout shift

--- a/src/assets/formulario-de-matricula/css/global.css
+++ b/src/assets/formulario-de-matricula/css/global.css
@@ -22,7 +22,7 @@
   --semantic-error: #DC2626;
 
   /* @TODO Só para desenvolver! */
-  zoom: .8;
+  /* zoom: .8; */
 }
 
 body{
